--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
                 name: "Singh & Associates",
                 phone1: "9628234606",
                 phone2: "9455853034",
-                email: "info@singhadvocates.com",
+                email: "rahulsinghhcadv@gmail.com",
                 address: "Block-C, Chamber No-113, High Court, Gomti Nagar, Lucknow, Uttar Pradesh",
                 location: "Lucknow, Uttar Pradesh",
                 copyrightYear: 2024
