--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                     `,
                     whatsapp: "919628234606",
                     phone: "919628234606",
-                    imageUrl: "/ashok"
+                    imageUrl: "/ashok.JPG"
                 },
                 {
                     name: "Rahul Kumar Singh",
@@ -1125,7 +1125,7 @@
                     `,
                     whatsapp: "919455853034",
                     phone: "919455853034",
-                    imageUrl: "/rahul"
+                    imageUrl: "/rahul.JPG"
                 }
             ],
             practiceAreas: [
