--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ashok Singh & Rahul Kumar Singh - Senior Advocates High Court Lucknow | Criminal, Civil & Service Law</title>
     <meta name="description" content="Expert legal advocates in Lucknow - Ashok Kumar Singh (40+ years) & Rahul Kumar Singh (13+ years). Specializing in Criminal Law, Civil Law, Service Law at High Court Lucknow. Contact for consultation.">
     <meta name="keywords" content="advocate Lucknow, criminal lawyer Lucknow, civil advocate Lucknow, High Court Lucknow, Ashok Singh advocate, Rahul Kumar Singh advocate, legal services Lucknow, service law, criminal defense">
-    <meta name="author" content="Singh & Associates - Legal Advocates">
+    <meta name="author" content="Ashok & Associates - Legal Advocates">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
@@ -990,7 +990,7 @@
 
     <!-- ========== ABOUT SECTION ========== -->
     <section class="about" id="about">
-        <h2 class="section-title">Why Choose Singh & Associates</h2>
+        <h2 class="section-title">Why Choose Ashok & Associates</h2>
         <p class="section-subtitle">Decades of Excellence in Legal Advocacy</p>
         <div class="about-content">
             <div class="about-image">
@@ -1099,7 +1099,7 @@
                     title: "Senior Advocate",
                     specialization: "Criminal, Civil & Service Law",
                     experience: "40+ Years",
-                    description: "Senior Advocate with four decades of distinguished legal practice. Founder of Singh & Associates and mentor to numerous advocates.",
+                    description: "Senior Advocate with four decades of distinguished legal practice. Founder of Ashok & Associates and mentor to numerous advocates.",
                     details: `
                         <p><strong>Specialization:</strong> Criminal Law, Civil Law, Service Law</p>
                         <p><strong>Experience:</strong> 40+ Years of Legal Practice</p>
@@ -1348,7 +1348,7 @@
         schemaScript.textContent = JSON.stringify({
             "@context": "https://schema.org/",
             "@type": "LocalBusiness",
-            "name": "Singh & Associates - Senior Advocates",
+            "name": "Ashok & Associates - Senior Advocates",
             "description": "Expert advocates specializing in Criminal Law, Civil Law, and Service Law at High Court Lucknow",
             "image": "https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/83f88bd0-8c6b-4a4f-b678-17573a1fd5c0",
             "address": {
@@ -1389,7 +1389,7 @@
             initializeWebsite();
         }
 
-        console.log("✅ Singh & Associates Website Loaded");
+        console.log("✅ Ashok & Associates Website Loaded");
         console.log("📝 SEO Optimized for High Court Lucknow Advocates");
         console.log("📋 Configuration:", CONFIG);
     </script>
